# iot-device-observer-pattern

./: README.md  pyproject.toml  sonar-project.properties
diagrams/: classes.plantuml
iot_device_observer_pattern/abstracts/: observer.py  subject.py
iot_device_observer_pattern/models/: dashboard.py  device.py  server.py
tests/: mocks.py  test_abstracts.py  test_device.py
