[tool.poetry]
name = "iot-device-observer-pattern"
version = "0.1.0"
description = ""
authors = ["Crhistian Caraballo <cristianjcj35@gmail.com>"]
readme = "README.md"
packages = [{include = "iot_device_observer_pattern"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.2"
nanoid = "^2.0.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
